# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world
    3. /etc/portage/virtuals is _USER_ configs only. Do not copy the old file.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  03 Jul 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge.py: Added masked
  package removal to binpkg candidates before getting the best. (#55871)

  01 Jul 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py:
  Fixed exception catching on module import.

  27 Jun 2004; Jason Stubbs <jstubbs@gentoo.org> bin/repoman.py:
  Fixed year (2003 -> 2004) in copyright lines.

  27 Jun 2004; Marius Mauch <genone@gentoo.org> pym/portage.py:
  Added a check for symlinked dirs to the collision-protect code so it doesn't
  double-check files in symlinked dirs with wrong pathnames.

  26 Jun 2004; Masatomo Nakano <nakano@gentoo.org> bin/regenworld: Fixed 
  regenworld. It always failed without -h or --help.

  26 Jun 2004; Masatomo Nakano <nakano@gentoo.org> bin/emerge: Added more
  messages when emerge fails due to masked package.

  26 Jun 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py:
  Added pkgsplit check on values returned by vardbapi.cpv_all()

  26 Jun 2004; Jason Stubbs <jstubbs@gentoo.org> repoman: Removed a stray dot.

  25 Jun 2004; Jason Stubbs <jstubbs@gentoo.org> repoman: Changed CVS
  header regex to "Gentoo Foundation"

*portage-2.0.51_pre12 (21 Jun 2003): Fixes

  21 Jun 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Removed the
  extra spawn of portageq as sandbox handles the python pyo's accesses now.

  21 Jun 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Fixes for
  the HOME issues. Correction of permissions from 6770 to 2770.

  21 Jun 2004; Masatomo Nakano <nakano@gentoo.org> pym/portage.py: